--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ jmespath==0.9.0
 pyaml==15.8.2
 python-dateutil==2.5.3
 python-lambda==2.2.0
-PyYAML==3.11
+pyyaml>=4.2b1
 s3transfer==0.1.11
 six==1.10.0
